--- a/ieee/model.ipynb
+++ b/ieee/model.ipynb
@@ -31,15 +31,13 @@
     "import gc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm_notebook\n",
     "import joblib\n",
     "\n",
     "from lightgbm import LGBMClassifier\n",
     "import optuna\n",
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.model_selection import TimeSeriesSplit, KFold, cross_val_score\n",
-    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
     "\n",
     "from ieee import utils\n",
     "from ieee import fe_browser\n",
