--- a/model.ipynb
+++ b/model.ipynb
@@ -2,30 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:14.554403Z",
-     "start_time": "2019-08-12T20:55:11.970960Z"
+     "end_time": "2019-08-13T06:39:57.999675Z",
+     "start_time": "2019-08-13T06:39:57.982596Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
-      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
-      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
-      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
-      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
-      "Using TensorFlow backend.\n",
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0812 22:55:14.534492 4602312128 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import gc\n",
@@ -39,38 +23,38 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
     "\n",
-    "from ieee import utils\n",
-    "from ieee import fe_browser\n",
-    "from ieee import fe_emails\n",
-    "from ieee import fe_cards\n",
-    "from ieee import fe_date\n",
-    "from ieee import fe_relatives\n",
-    "from ieee import fe_categorical\n",
-    "from ieee import prepro"
+    "import utils\n",
+    "import fe_browser\n",
+    "import fe_emails\n",
+    "import fe_cards\n",
+    "import fe_date\n",
+    "import fe_relatives\n",
+    "import fe_categorical\n",
+    "import prepro"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:14.567687Z",
-     "start_time": "2019-08-12T20:55:14.557791Z"
+     "end_time": "2019-08-13T06:40:19.011323Z",
+     "start_time": "2019-08-13T06:40:19.008696Z"
     },
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "DATA_PATH = '../input/'"
+    "DATA_PATH = 'input/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:21.476179Z",
-     "start_time": "2019-08-12T20:55:14.573236Z"
+     "end_time": "2019-08-13T06:40:26.469999Z",
+     "start_time": "2019-08-13T06:40:19.259346Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -92,33 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:24.911570Z",
-     "start_time": "2019-08-12T20:55:21.477991Z"
+     "end_time": "2019-08-13T06:40:08.456813Z",
+     "start_time": "2019-08-13T06:40:01.952Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 features are going to be dropped for being useless\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train, test = utils.drop_columns(train, test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:25.729810Z",
-     "start_time": "2019-08-12T20:55:24.913387Z"
+     "end_time": "2019-08-13T06:40:08.458164Z",
+     "start_time": "2019-08-13T06:40:03.828Z"
     }
    },
    "outputs": [],
@@ -128,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:55.337941Z",
-     "start_time": "2019-08-12T20:55:25.731434Z"
+     "end_time": "2019-08-13T06:40:08.460062Z",
+     "start_time": "2019-08-13T06:40:04.066Z"
     }
    },
    "outputs": [],
@@ -148,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:55:55.997215Z",
-     "start_time": "2019-08-12T20:55:55.340872Z"
+     "end_time": "2019-08-13T06:40:08.461668Z",
+     "start_time": "2019-08-13T06:40:04.288Z"
     }
    },
    "outputs": [],
@@ -162,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:06.123107Z",
-     "start_time": "2019-08-12T20:55:55.999325Z"
+     "end_time": "2019-08-13T06:40:08.463134Z",
+     "start_time": "2019-08-13T06:40:04.666Z"
     }
    },
    "outputs": [],
@@ -176,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:06.212989Z",
-     "start_time": "2019-08-12T20:56:06.124672Z"
+     "end_time": "2019-08-13T06:40:08.465165Z",
+     "start_time": "2019-08-13T06:40:05.043Z"
     },
     "lines_to_next_cell": 2
    },
@@ -191,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:27.256559Z",
-     "start_time": "2019-08-12T20:56:06.215354Z"
+     "end_time": "2019-08-13T06:40:08.466810Z",
+     "start_time": "2019-08-13T06:40:06.793Z"
     },
     "lines_to_next_cell": 2
    },
@@ -207,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:35.919398Z",
-     "start_time": "2019-08-12T20:56:27.258601Z"
+     "end_time": "2019-08-13T06:40:08.468537Z",
+     "start_time": "2019-08-13T06:40:07.237Z"
     }
    },
    "outputs": [],
