--- a/model.ipynb
+++ b/model.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:39:57.999675Z",
-     "start_time": "2019-08-13T06:39:57.982596Z"
+     "end_time": "2019-08-13T07:02:51.338214Z",
+     "start_time": "2019-08-13T07:02:51.329905Z"
     }
    },
    "outputs": [],
@@ -23,38 +23,38 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
     "\n",
-    "import utils\n",
-    "import fe_browser\n",
-    "import fe_emails\n",
-    "import fe_cards\n",
-    "import fe_date\n",
-    "import fe_relatives\n",
-    "import fe_categorical\n",
-    "import prepro"
+    "from codes import utils\n",
+    "from codes import fe_browser\n",
+    "from codes import fe_emails\n",
+    "from codes import fe_cards\n",
+    "from codes import fe_date\n",
+    "from codes import fe_relatives\n",
+    "from codes import fe_categorical\n",
+    "from codes import prepro"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:19.011323Z",
-     "start_time": "2019-08-13T06:40:19.008696Z"
+     "end_time": "2019-08-13T07:02:51.784689Z",
+     "start_time": "2019-08-13T07:02:51.776853Z"
     },
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "DATA_PATH = 'input/'"
+    "DATA_PATH = '../input/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:26.469999Z",
-     "start_time": "2019-08-13T06:40:19.259346Z"
+     "end_time": "2019-08-13T07:02:59.088305Z",
+     "start_time": "2019-08-13T07:02:52.345795Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
