--- a/model.ipynb
+++ b/model.ipynb
@@ -2,14 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:02:51.338214Z",
-     "start_time": "2019-08-13T07:02:51.329905Z"
+     "end_time": "2019-08-13T07:18:43.109208Z",
+     "start_time": "2019-08-13T07:18:43.106346Z"
     }
    },
    "outputs": [],
+   "source": [
+    "# !rm -r ieee\n",
+    "# !rm -r codes\n",
+    "# !git clone https://github.com/PiotrekGa/ieee.git\n",
+    "# !mv ieee/codes ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T07:18:47.304245Z",
+     "start_time": "2019-08-13T07:18:43.111693Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0813 09:18:47.290956 4684072384 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -35,26 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:02:51.784689Z",
-     "start_time": "2019-08-13T07:02:51.776853Z"
+     "end_time": "2019-08-13T07:18:47.309562Z",
+     "start_time": "2019-08-13T07:18:47.306775Z"
     },
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "DATA_PATH = '../input/'"
+    "DATA_PATH = '../input/'\n",
+    "SEARCH_PARAMS = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:02:59.088305Z",
-     "start_time": "2019-08-13T07:02:52.345795Z"
+     "end_time": "2019-08-13T07:18:52.695854Z",
+     "start_time": "2019-08-13T07:18:47.312022Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -76,25 +110,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.456813Z",
-     "start_time": "2019-08-13T06:40:01.952Z"
+     "end_time": "2019-08-13T07:18:56.062331Z",
+     "start_time": "2019-08-13T07:18:52.697443Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 features are going to be dropped for being useless\n"
+     ]
+    }
+   ],
    "source": [
     "train, test = utils.drop_columns(train, test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.458164Z",
-     "start_time": "2019-08-13T06:40:03.828Z"
+     "end_time": "2019-08-13T07:18:56.903167Z",
+     "start_time": "2019-08-13T07:18:56.065159Z"
     }
    },
    "outputs": [],
@@ -104,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.460062Z",
-     "start_time": "2019-08-13T06:40:04.066Z"
+     "end_time": "2019-08-13T07:19:26.031356Z",
+     "start_time": "2019-08-13T07:18:56.905071Z"
     }
    },
    "outputs": [],
@@ -124,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.461668Z",
-     "start_time": "2019-08-13T06:40:04.288Z"
+     "end_time": "2019-08-13T07:19:26.756321Z",
+     "start_time": "2019-08-13T07:19:26.033163Z"
     }
    },
    "outputs": [],
@@ -138,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.463134Z",
-     "start_time": "2019-08-13T06:40:04.666Z"
+     "end_time": "2019-08-13T07:19:37.040965Z",
+     "start_time": "2019-08-13T07:19:26.757924Z"
     }
    },
    "outputs": [],
@@ -152,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.465165Z",
-     "start_time": "2019-08-13T06:40:05.043Z"
+     "end_time": "2019-08-13T07:19:37.145223Z",
+     "start_time": "2019-08-13T07:19:37.042756Z"
     },
     "lines_to_next_cell": 2
    },
@@ -167,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.466810Z",
-     "start_time": "2019-08-13T06:40:06.793Z"
+     "end_time": "2019-08-13T07:20:01.287287Z",
+     "start_time": "2019-08-13T07:19:37.148420Z"
     },
     "lines_to_next_cell": 2
    },
@@ -183,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:40:08.468537Z",
-     "start_time": "2019-08-13T06:40:07.237Z"
+     "end_time": "2019-08-13T07:20:10.609100Z",
+     "start_time": "2019-08-13T07:20:01.289716Z"
     }
    },
    "outputs": [],
@@ -213,26 +255,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:35.928314Z",
-     "start_time": "2019-08-12T20:56:35.921209Z"
+     "end_time": "2019-08-13T07:20:10.616653Z",
+     "start_time": "2019-08-13T07:20:10.611374Z"
     }
    },
    "outputs": [],
    "source": [
-    "submission=sample_submission.copy()\n",
+    "submission = sample_submission.copy()\n",
     "submission['isFraud'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:35.934448Z",
-     "start_time": "2019-08-12T20:56:35.930901Z"
+     "end_time": "2019-08-13T07:20:10.629560Z",
+     "start_time": "2019-08-13T07:20:10.620517Z"
     }
    },
    "outputs": [],
@@ -242,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T20:56:35.943284Z",
-     "start_time": "2019-08-12T20:56:35.936667Z"
+     "end_time": "2019-08-13T07:20:10.641840Z",
+     "start_time": "2019-08-13T07:20:10.633971Z"
     }
    },
    "outputs": [],
@@ -277,25 +319,7 @@
     "    \n",
     "    model.set_params(**params)\n",
     "\n",
-    "    return - np.mean(cross_val_score(model, X_train, y_train, cv=4, scoring='roc_auc'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-13T05:01:12.268532Z",
-     "start_time": "2019-08-12T20:56:35.945678Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if os.path.isfile('study.pkl'):\n",
-    "    study = joblib.load('study.pkl')\n",
-    "else:\n",
-    "    study = optuna.create_study()\n",
-    "study.optimize(objective, timeout=60*60*8)"
+    "    return - np.mean(cross_val_score(model, X_train, y_train, cv=8, scoring='roc_auc'))"
    ]
   },
   {
@@ -303,21 +327,32 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:01:12.390613Z",
-     "start_time": "2019-08-13T05:01:12.323727Z"
+     "end_time": "2019-08-13T07:20:10.651273Z",
+     "start_time": "2019-08-13T07:20:10.645109Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'num_leaves': 116, 'max_depth': 78, 'n_estimators': 273, 'subsample_for_bin': 87043, 'min_child_samples': 1000, 'reg_alpha': 0.9028845416568297, 'colsample_bytree': 0.6967754069828626, 'learning_rate': 0.0442974258725275}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(study.best_params)"
+    "if SEARCH_PARAMS:\n",
+    "\n",
+    "    if os.path.isfile('study.pkl'):\n",
+    "        study = joblib.load('study.pkl')\n",
+    "    else:\n",
+    "        study = optuna.create_study()\n",
+    "    study.optimize(objective, timeout=60*60*8)\n",
+    "    \n",
+    "    params = study.best_params\n",
+    "\n",
+    "else:\n",
+    "    \n",
+    "    params = {'num_leaves': 116, \n",
+    "              'max_depth': 78, \n",
+    "              'n_estimators': 273, \n",
+    "              'subsample_for_bin': 87043, \n",
+    "              'min_child_samples': 1000, \n",
+    "              'reg_alpha': 0.9028845416568297, \n",
+    "              'colsample_bytree': 0.6967754069828626, \n",
+    "              'learning_rate': 0.0442974258725275}"
    ]
   },
   {
@@ -325,8 +360,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:17:19.579190Z",
-     "start_time": "2019-08-13T05:01:12.392993Z"
+     "end_time": "2019-08-13T07:37:43.817161Z",
+     "start_time": "2019-08-13T07:20:10.655186Z"
     }
    },
    "outputs": [
@@ -334,14 +369,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9582742592595882\n",
-      "ROC accuracy: 0.9637357240766808\n",
-      "ROC accuracy: 0.9583961402329393\n",
-      "ROC accuracy: 0.9582335030618865\n",
-      "ROC accuracy: 0.9594001456607438\n",
-      "ROC accuracy: 0.9619460730980097\n",
-      "ROC accuracy: 0.9609497665977594\n",
-      "ROC accuracy: 0.9577101737225144\n"
+      "0.883\n",
+      "{'num_leaves': 116, 'max_depth': 78, 'n_estimators': 273, 'subsample_for_bin': 87043, 'min_child_samples': 1000, 'reg_alpha': 0.9028845416568297, 'colsample_bytree': 0.6967754069828626, 'learning_rate': 0.0442974258725275}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.set_params(**params)\n",
+    "model_score = np.round(np.mean(cross_val_score(model, X_train, y_train, cv=8, scoring='roc_auc')),4)\n",
+    "print(model_score)\n",
+    "print(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T07:54:50.411797Z",
+     "start_time": "2019-08-13T07:37:43.837753Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC accuracy: 0.9576732754827985\n",
+      "ROC accuracy: 0.960544128298831\n",
+      "ROC accuracy: 0.9588951401587188\n",
+      "ROC accuracy: 0.9608201471735272\n",
+      "ROC accuracy: 0.9579152473242181\n",
+      "ROC accuracy: 0.9584102799894862\n",
+      "ROC accuracy: 0.9618363792175348\n",
+      "ROC accuracy: 0.9610270159473142\n"
      ]
     }
    ],
@@ -350,7 +411,6 @@
     "folds = KFold(n_splits=n_fold, shuffle=True)\n",
     "\n",
     "for train_index, valid_index in folds.split(X_train):\n",
-    "    model.set_params(**study.best_params)\n",
     "    X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
     "    y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
     "    model.fit(X_train_,y_train_)\n",
@@ -366,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:17:21.037347Z",
-     "start_time": "2019-08-13T05:17:19.587056Z"
+     "end_time": "2019-08-13T07:54:51.856178Z",
+     "start_time": "2019-08-13T07:54:50.419572Z"
     }
    },
    "outputs": [],
    "source": [
-    "submission.to_csv('submission.csv')"
+    "submission.to_csv('submission_{}.csv'.format(str(model_score)))"
    ]
   }
  ],
