--- a/model.ipynb
+++ b/model.ipynb
@@ -19,30 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:47.304245Z",
-     "start_time": "2019-08-13T07:18:43.111693Z"
+     "end_time": "2019-08-13T08:02:01.496678Z",
+     "start_time": "2019-08-13T08:02:01.478455Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
-      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
-      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
-      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
-      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
-      "Using TensorFlow backend.\n",
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0813 09:18:47.290956 4684072384 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import gc\n",
@@ -54,7 +38,7 @@
     "import optuna\n",
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
     "\n",
     "from codes import utils\n",
     "from codes import fe_browser\n",
@@ -301,9 +285,9 @@
     "    max_depth = trial.suggest_int('max_depth', 2, 100) \n",
     "    n_estimators = trial.suggest_int('n_estimators', 10, 500) \n",
     "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 2000, 300_000) \n",
-    "    min_child_samples = trial.suggest_int('min_child_samples', 20, 1000) \n",
+    "    min_child_samples = trial.suggest_int('min_child_samples', 20, 10000) \n",
     "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.0, 1.0) \n",
-    "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.6, 1.0) \n",
+    "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.5, 1.0) \n",
     "    learning_rate = trial.suggest_loguniform('learning_rate', 1e-5, 1e-0)   \n",
     "\n",
     "    params = {\n",
@@ -357,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:37:43.817161Z",
-     "start_time": "2019-08-13T07:20:10.655186Z"
+     "end_time": "2019-08-13T08:30:32.820997Z",
+     "start_time": "2019-08-13T08:11:59.054127Z"
     }
    },
    "outputs": [
@@ -369,48 +353,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.883\n",
+      "ROC accuracy: 0.9581890283100808\n",
+      "ROC accuracy: 0.962410479282324\n",
+      "ROC accuracy: 0.9612925662692237\n",
+      "ROC accuracy: 0.9597142347903741\n",
+      "ROC accuracy: 0.9572672294220863\n",
+      "ROC accuracy: 0.9564554442507351\n",
+      "ROC accuracy: 0.9640608171129701\n",
+      "ROC accuracy: 0.9599193237234929\n",
+      "0.9599\n",
       "{'num_leaves': 116, 'max_depth': 78, 'n_estimators': 273, 'subsample_for_bin': 87043, 'min_child_samples': 1000, 'reg_alpha': 0.9028845416568297, 'colsample_bytree': 0.6967754069828626, 'learning_rate': 0.0442974258725275}\n"
      ]
     }
    ],
    "source": [
+    "model = LGBMClassifier(metric='auc')\n",
     "model.set_params(**params)\n",
-    "model_score = np.round(np.mean(cross_val_score(model, X_train, y_train, cv=8, scoring='roc_auc')),4)\n",
-    "print(model_score)\n",
-    "print(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-13T07:54:50.411797Z",
-     "start_time": "2019-08-13T07:37:43.837753Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROC accuracy: 0.9576732754827985\n",
-      "ROC accuracy: 0.960544128298831\n",
-      "ROC accuracy: 0.9588951401587188\n",
-      "ROC accuracy: 0.9608201471735272\n",
-      "ROC accuracy: 0.9579152473242181\n",
-      "ROC accuracy: 0.9584102799894862\n",
-      "ROC accuracy: 0.9618363792175348\n",
-      "ROC accuracy: 0.9610270159473142\n"
-     ]
-    }
-   ],
-   "source": [
-    "n_fold = 8\n",
-    "folds = KFold(n_splits=n_fold, shuffle=True)\n",
     "\n",
-    "for train_index, valid_index in folds.split(X_train):\n",
+    "n_fold = 8\n",
+    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
+    "\n",
+    "model_scores = []\n",
+    "for train_index, valid_index in folds.split(X_train, y_train):\n",
     "    X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
     "    y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
     "    model.fit(X_train_,y_train_)\n",
@@ -418,25 +382,37 @@
     "    pred=model.predict_proba(X_test)[:,1]\n",
     "    val=model.predict_proba(X_valid)[:,1]\n",
     "    del X_valid\n",
-    "    print('ROC accuracy: {}'.format(roc_auc_score(y_valid, val)))\n",
+    "    model_scores.append(roc_auc_score(y_valid, val))\n",
+    "    print('ROC accuracy: {}'.format(model_scores[-1]))\n",
     "    del val, y_valid\n",
     "    submission['isFraud'] = submission['isFraud'] + pred / n_fold\n",
-    "    del pred"
+    "    del pred\n",
+    "    \n",
+    "model_score = np.round(np.mean(model_scores),4)\n",
+    "print(model_score)\n",
+    "print(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:54:51.856178Z",
-     "start_time": "2019-08-13T07:54:50.419572Z"
+     "end_time": "2019-08-13T08:30:34.475778Z",
+     "start_time": "2019-08-13T08:30:32.840795Z"
     }
    },
    "outputs": [],
    "source": [
     "submission.to_csv('submission_{}.csv'.format(str(model_score)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
