--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:43.109208Z",
-     "start_time": "2019-08-13T07:18:43.106346Z"
+     "end_time": "2019-08-13T09:39:22.236558Z",
+     "start_time": "2019-08-13T09:39:22.233345Z"
     }
    },
    "outputs": [],
@@ -19,14 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T08:02:01.496678Z",
-     "start_time": "2019-08-13T08:02:01.478455Z"
+     "end_time": "2019-08-13T09:39:26.872128Z",
+     "start_time": "2019-08-13T09:39:22.239800Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0813 11:39:26.843754 4532499904 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -47,7 +63,8 @@
     "from codes import fe_date\n",
     "from codes import fe_relatives\n",
     "from codes import fe_categorical\n",
-    "from codes import prepro"
+    "from codes import prepro\n",
+    "from codes import fe_users"
    ]
   },
   {
@@ -55,8 +72,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:47.309562Z",
-     "start_time": "2019-08-13T07:18:47.306775Z"
+     "end_time": "2019-08-13T09:39:26.877779Z",
+     "start_time": "2019-08-13T09:39:26.875021Z"
     },
     "lines_to_next_cell": 2
    },
@@ -71,8 +88,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:52.695854Z",
-     "start_time": "2019-08-13T07:18:47.312022Z"
+     "end_time": "2019-08-13T09:39:32.773458Z",
+     "start_time": "2019-08-13T09:39:26.881389Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -97,8 +114,37 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:56.062331Z",
-     "start_time": "2019-08-13T07:18:52.697443Z"
+     "end_time": "2019-08-13T09:40:09.039597Z",
+     "start_time": "2019-08-13T09:39:32.775258Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  all_data = pd.concat([train, test])\n"
+     ]
+    }
+   ],
+   "source": [
+    "train, test = fe_users.users_stats(train, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T09:40:13.702218Z",
+     "start_time": "2019-08-13T09:40:09.041119Z"
     }
    },
    "outputs": [
@@ -116,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:18:56.903167Z",
-     "start_time": "2019-08-13T07:18:56.065159Z"
+     "end_time": "2019-08-13T09:40:14.907658Z",
+     "start_time": "2019-08-13T09:40:13.705185Z"
     }
    },
    "outputs": [],
@@ -130,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:19:26.031356Z",
-     "start_time": "2019-08-13T07:18:56.905071Z"
+     "end_time": "2019-08-13T09:40:52.540586Z",
+     "start_time": "2019-08-13T09:40:14.910347Z"
     }
    },
    "outputs": [],
@@ -150,11 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:19:26.756321Z",
-     "start_time": "2019-08-13T07:19:26.033163Z"
+     "end_time": "2019-08-13T09:40:53.063632Z",
+     "start_time": "2019-08-13T09:40:52.542885Z"
     }
    },
    "outputs": [],
@@ -164,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:19:37.040965Z",
-     "start_time": "2019-08-13T07:19:26.757924Z"
+     "end_time": "2019-08-13T09:41:09.610755Z",
+     "start_time": "2019-08-13T09:40:53.065393Z"
     }
    },
    "outputs": [],
@@ -178,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:19:37.145223Z",
-     "start_time": "2019-08-13T07:19:37.042756Z"
+     "end_time": "2019-08-13T09:41:09.731171Z",
+     "start_time": "2019-08-13T09:41:09.613400Z"
     },
     "lines_to_next_cell": 2
    },
@@ -193,11 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:01.287287Z",
-     "start_time": "2019-08-13T07:19:37.148420Z"
+     "end_time": "2019-08-13T09:41:37.035692Z",
+     "start_time": "2019-08-13T09:41:09.736468Z"
     },
     "lines_to_next_cell": 2
    },
@@ -209,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:10.609100Z",
-     "start_time": "2019-08-13T07:20:01.289716Z"
+     "end_time": "2019-08-13T09:41:50.624826Z",
+     "start_time": "2019-08-13T09:41:37.037520Z"
     }
    },
    "outputs": [],
@@ -239,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:10.616653Z",
-     "start_time": "2019-08-13T07:20:10.611374Z"
+     "end_time": "2019-08-13T09:41:50.633799Z",
+     "start_time": "2019-08-13T09:41:50.626723Z"
     }
    },
    "outputs": [],
@@ -254,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:10.629560Z",
-     "start_time": "2019-08-13T07:20:10.620517Z"
+     "end_time": "2019-08-13T09:41:50.639899Z",
+     "start_time": "2019-08-13T09:41:50.636473Z"
     }
    },
    "outputs": [],
@@ -268,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:10.641840Z",
-     "start_time": "2019-08-13T07:20:10.633971Z"
+     "end_time": "2019-08-13T09:41:50.651209Z",
+     "start_time": "2019-08-13T09:41:50.643271Z"
     }
    },
    "outputs": [],
@@ -308,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T07:20:10.651273Z",
-     "start_time": "2019-08-13T07:20:10.645109Z"
+     "end_time": "2019-08-13T09:41:50.658103Z",
+     "start_time": "2019-08-13T09:41:50.653224Z"
     }
    },
    "outputs": [],
@@ -341,11 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T08:30:32.820997Z",
-     "start_time": "2019-08-13T08:11:59.054127Z"
+     "end_time": "2019-08-13T09:59:45.213328Z",
+     "start_time": "2019-08-13T09:41:50.660672Z"
     }
    },
    "outputs": [
@@ -353,15 +399,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9581890283100808\n",
-      "ROC accuracy: 0.962410479282324\n",
-      "ROC accuracy: 0.9612925662692237\n",
-      "ROC accuracy: 0.9597142347903741\n",
-      "ROC accuracy: 0.9572672294220863\n",
-      "ROC accuracy: 0.9564554442507351\n",
-      "ROC accuracy: 0.9640608171129701\n",
-      "ROC accuracy: 0.9599193237234929\n",
-      "0.9599\n",
+      "ROC accuracy: 0.9606936532420202\n",
+      "ROC accuracy: 0.9591156532849006\n",
+      "ROC accuracy: 0.9566324848741172\n",
+      "ROC accuracy: 0.962713098839318\n",
+      "ROC accuracy: 0.9582139630920119\n",
+      "ROC accuracy: 0.960056125134188\n",
+      "ROC accuracy: 0.9611252216348987\n",
+      "ROC accuracy: 0.9619930795281855\n",
+      "0.9601\n",
       "{'num_leaves': 116, 'max_depth': 78, 'n_estimators': 273, 'subsample_for_bin': 87043, 'min_child_samples': 1000, 'reg_alpha': 0.9028845416568297, 'colsample_bytree': 0.6967754069828626, 'learning_rate': 0.0442974258725275}\n"
      ]
     }
@@ -395,24 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T08:30:34.475778Z",
-     "start_time": "2019-08-13T08:30:32.840795Z"
+     "end_time": "2019-08-13T09:59:46.795294Z",
+     "start_time": "2019-08-13T09:59:45.243262Z"
     }
    },
    "outputs": [],
    "source": [
     "submission.to_csv('submission_{}.csv'.format(str(model_score)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
