--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:39:22.236558Z",
-     "start_time": "2019-08-13T09:39:22.233345Z"
+     "end_time": "2019-08-13T10:56:59.363985Z",
+     "start_time": "2019-08-13T10:56:59.360964Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:39:26.872128Z",
-     "start_time": "2019-08-13T09:39:22.239800Z"
+     "end_time": "2019-08-13T10:57:04.247762Z",
+     "start_time": "2019-08-13T10:56:59.366913Z"
     }
    },
    "outputs": [
@@ -38,7 +38,7 @@
       "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
       "Using TensorFlow backend.\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0813 11:39:26.843754 4532499904 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "W0813 12:57:04.225690 4646581696 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
       "\n"
      ]
     }
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:39:26.877779Z",
-     "start_time": "2019-08-13T09:39:26.875021Z"
+     "end_time": "2019-08-14T05:13:50.846199Z",
+     "start_time": "2019-08-14T05:13:50.836525Z"
     },
     "lines_to_next_cell": 2
    },
@@ -88,8 +88,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:39:32.773458Z",
-     "start_time": "2019-08-13T09:39:26.881389Z"
+     "end_time": "2019-08-13T10:57:11.010811Z",
+     "start_time": "2019-08-13T10:57:04.256548Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -114,8 +114,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:40:09.039597Z",
-     "start_time": "2019-08-13T09:39:32.775258Z"
+     "end_time": "2019-08-13T10:57:46.814354Z",
+     "start_time": "2019-08-13T10:57:11.013372Z"
     }
    },
    "outputs": [
@@ -143,8 +143,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:40:13.702218Z",
-     "start_time": "2019-08-13T09:40:09.041119Z"
+     "end_time": "2019-08-13T10:57:49.821040Z",
+     "start_time": "2019-08-13T10:57:46.816293Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:40:14.907658Z",
-     "start_time": "2019-08-13T09:40:13.705185Z"
+     "end_time": "2019-08-13T10:57:50.542114Z",
+     "start_time": "2019-08-13T10:57:49.824030Z"
     }
    },
    "outputs": [],
@@ -179,8 +179,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:40:52.540586Z",
-     "start_time": "2019-08-13T09:40:14.910347Z"
+     "end_time": "2019-08-13T10:58:26.634425Z",
+     "start_time": "2019-08-13T10:57:50.544073Z"
     }
    },
    "outputs": [],
@@ -199,8 +199,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:40:53.063632Z",
-     "start_time": "2019-08-13T09:40:52.542885Z"
+     "end_time": "2019-08-13T10:58:27.389774Z",
+     "start_time": "2019-08-13T10:58:26.636167Z"
     }
    },
    "outputs": [],
@@ -213,8 +213,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:09.610755Z",
-     "start_time": "2019-08-13T09:40:53.065393Z"
+     "end_time": "2019-08-13T10:58:38.607759Z",
+     "start_time": "2019-08-13T10:58:27.391538Z"
     }
    },
    "outputs": [],
@@ -227,8 +227,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:09.731171Z",
-     "start_time": "2019-08-13T09:41:09.613400Z"
+     "end_time": "2019-08-13T10:58:38.686319Z",
+     "start_time": "2019-08-13T10:58:38.609391Z"
     },
     "lines_to_next_cell": 2
    },
@@ -242,8 +242,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:37.035692Z",
-     "start_time": "2019-08-13T09:41:09.736468Z"
+     "end_time": "2019-08-13T10:59:04.151637Z",
+     "start_time": "2019-08-13T10:58:38.688211Z"
     },
     "lines_to_next_cell": 2
    },
@@ -258,8 +258,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:50.624826Z",
-     "start_time": "2019-08-13T09:41:37.037520Z"
+     "end_time": "2019-08-13T10:59:13.736542Z",
+     "start_time": "2019-08-13T10:59:04.153714Z"
     }
    },
    "outputs": [],
@@ -288,8 +288,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:50.633799Z",
-     "start_time": "2019-08-13T09:41:50.626723Z"
+     "end_time": "2019-08-13T10:59:13.745975Z",
+     "start_time": "2019-08-13T10:59:13.738580Z"
     }
    },
    "outputs": [],
@@ -303,8 +303,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:50.639899Z",
-     "start_time": "2019-08-13T09:41:50.636473Z"
+     "end_time": "2019-08-13T10:59:13.750908Z",
+     "start_time": "2019-08-13T10:59:13.747803Z"
     }
    },
    "outputs": [],
@@ -314,11 +314,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:50.651209Z",
-     "start_time": "2019-08-13T09:41:50.643271Z"
+     "end_time": "2019-08-13T12:41:13.259055Z",
+     "start_time": "2019-08-13T12:41:13.252381Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def cross_val_score2(model, X_train, y_train, n_fold):\n",
+    "    \n",
+    "    folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
+    "    \n",
+    "    model_scores = []\n",
+    "    for train_index, valid_index in folds.split(X_train, y_train):\n",
+    "        X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
+    "        y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
+    "        model.fit(X_train_,y_train_)\n",
+    "        del X_train_,y_train_\n",
+    "        val = model.predict_proba(X_valid)[:,1]\n",
+    "        del X_valid\n",
+    "        model_scores.append(roc_auc_score(y_valid, val))\n",
+    "        print('ROC accuracy: {}'.format(model_scores[-1]))\n",
+    "        del val, y_valid\n",
+    "    \n",
+    "    return np.mean(model_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T12:42:01.372419Z",
+     "start_time": "2019-08-13T12:42:01.364460Z"
     }
    },
    "outputs": [],
@@ -327,12 +357,114 @@
     "    \n",
     "    joblib.dump(study, 'study.pkl')\n",
     "    \n",
-    "    num_leaves = trial.suggest_int('num_leaves', 2, 200) \n",
-    "    max_depth = trial.suggest_int('max_depth', 2, 100) \n",
-    "    n_estimators = trial.suggest_int('n_estimators', 10, 500) \n",
-    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 2000, 300_000) \n",
+    "    num_leaves = trial.suggest_int('num_leaves', 110, 120) \n",
+    "    max_depth = trial.suggest_int('max_depth', 70, 80) \n",
+    "    n_estimators = trial.suggest_int('n_estimators', 270, 280) \n",
+    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 87000, 88044) \n",
+    "    min_child_samples = trial.suggest_int('min_child_samples', 1000, 1101) \n",
+    "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.902, 0.953) \n",
+    "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.6567, 0.75678) \n",
+    "    learning_rate = trial.suggest_loguniform('learning_rate', 0.04, 0.05)   \n",
+    "\n",
+    "    params = {\n",
+    "        'num_leaves': num_leaves,\n",
+    "        'max_depth': max_depth,\n",
+    "        'n_estimators': n_estimators,\n",
+    "        'subsample_for_bin': subsample_for_bin,\n",
+    "        'min_child_samples': min_child_samples,\n",
+    "        'reg_alpha': reg_alpha,\n",
+    "        'colsample_bytree': colsample_bytree,\n",
+    "        'learning_rate': learning_rate\n",
+    "    }\n",
+    "    \n",
+    "    model.set_params(**params)\n",
+    "\n",
+    "    return - cross_val_score2(model, X_train, y_train, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T14:25:23.644818Z",
+     "start_time": "2019-08-13T12:42:02.662948Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC accuracy: 0.9567467457405775\n",
+      "ROC accuracy: 0.963336044474564\n",
+      "ROC accuracy: 0.9647586585663408\n",
+      "ROC accuracy: 0.9591584467619989\n",
+      "ROC accuracy: 0.9625810064516032\n",
+      "ROC accuracy: 0.9590554045914841\n",
+      "ROC accuracy: 0.9621024255437666\n",
+      "ROC accuracy: 0.9622490082815178\n",
+      "ROC accuracy: 0.9557141805512451\n",
+      "ROC accuracy: 0.9561348707572045\n",
+      "ROC accuracy: 0.9565690609627973\n",
+      "ROC accuracy: 0.9581682239628199\n",
+      "ROC accuracy: 0.9550286805698729\n",
+      "ROC accuracy: 0.9595700259322112\n",
+      "ROC accuracy: 0.9566089083574226\n",
+      "ROC accuracy: 0.9610047972070186\n",
+      "ROC accuracy: 0.9629218107901683\n",
+      "ROC accuracy: 0.9645582672674383\n",
+      "ROC accuracy: 0.9632401151293449\n",
+      "ROC accuracy: 0.9630101966573317\n",
+      "ROC accuracy: 0.959037332634855\n",
+      "ROC accuracy: 0.955117517896528\n",
+      "ROC accuracy: 0.9594840029878245\n",
+      "ROC accuracy: 0.9628698171029347\n",
+      "ROC accuracy: 0.9621010716820361\n",
+      "ROC accuracy: 0.9595651260987736\n",
+      "ROC accuracy: 0.9596066315324285\n",
+      "ROC accuracy: 0.9598380934826607\n",
+      "ROC accuracy: 0.9598701315252681\n",
+      "ROC accuracy: 0.9602484376112618\n",
+      "ROC accuracy: 0.9589004730729325\n",
+      "ROC accuracy: 0.9639249033965734\n",
+      "ROC accuracy: 0.9563680718378244\n",
+      "ROC accuracy: 0.9547432566645853\n",
+      "ROC accuracy: 0.9571991261630671\n",
+      "ROC accuracy: 0.9587102891654813\n",
+      "ROC accuracy: 0.9566416587869113\n",
+      "ROC accuracy: 0.9572200853988052\n",
+      "ROC accuracy: 0.9614151441752267\n",
+      "ROC accuracy: 0.9617437729965892\n"
+     ]
+    }
+   ],
+   "source": [
+    "study = optuna.create_study()\n",
+    "study.optimize(objective, n_trials=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-13T20:27:30.547293Z",
+     "start_time": "2019-08-13T20:27:30.506681Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def objective(trial):\n",
+    "    \n",
+    "    joblib.dump(study, 'study.pkl')\n",
+    "    \n",
+    "    num_leaves = trial.suggest_int('num_leaves', 2, 500) \n",
+    "    max_depth = trial.suggest_int('max_depth', 2, 300) \n",
+    "    n_estimators = trial.suggest_int('n_estimators', 100, 2000) \n",
+    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 100_000, 500_000) \n",
     "    min_child_samples = trial.suggest_int('min_child_samples', 20, 10000) \n",
-    "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.0, 1.0) \n",
+    "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.0, 2.0) \n",
     "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.5, 1.0) \n",
     "    learning_rate = trial.suggest_loguniform('learning_rate', 1e-5, 1e-0)   \n",
     "\n",
@@ -349,16 +481,16 @@
     "    \n",
     "    model.set_params(**params)\n",
     "\n",
-    "    return - np.mean(cross_val_score(model, X_train, y_train, cv=8, scoring='roc_auc'))"
+    "    return - cross_val_score2(model, X_train, y_train, 8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:41:50.658103Z",
-     "start_time": "2019-08-13T09:41:50.653224Z"
+     "end_time": "2019-08-14T05:13:54.983816Z",
+     "start_time": "2019-08-14T05:13:54.968137Z"
     }
    },
    "outputs": [],
@@ -369,29 +501,29 @@
     "        study = joblib.load('study.pkl')\n",
     "    else:\n",
     "        study = optuna.create_study()\n",
-    "    study.optimize(objective, timeout=60*60*8)\n",
+    "    study.optimize(objective, timeout=60*60*9)\n",
     "    \n",
     "    params = study.best_params\n",
     "\n",
     "else:\n",
     "    \n",
-    "    params = {'num_leaves': 116, \n",
-    "              'max_depth': 78, \n",
-    "              'n_estimators': 273, \n",
-    "              'subsample_for_bin': 87043, \n",
-    "              'min_child_samples': 1000, \n",
-    "              'reg_alpha': 0.9028845416568297, \n",
-    "              'colsample_bytree': 0.6967754069828626, \n",
-    "              'learning_rate': 0.0442974258725275}"
+    "    params = {'num_leaves': 302,\n",
+    "             'max_depth': 157,\n",
+    "             'n_estimators': 966,\n",
+    "             'subsample_for_bin': 290858,\n",
+    "             'min_child_samples': 79,\n",
+    "             'reg_alpha': 0.9919573524807885,\n",
+    "             'colsample_bytree': 0.5653288564015742,\n",
+    "             'learning_rate': 0.028565794309535042}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:59:45.213328Z",
-     "start_time": "2019-08-13T09:41:50.660672Z"
+     "end_time": "2019-08-14T06:03:44.460019Z",
+     "start_time": "2019-08-14T05:14:05.928780Z"
     }
    },
    "outputs": [
@@ -399,16 +531,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9606936532420202\n",
-      "ROC accuracy: 0.9591156532849006\n",
-      "ROC accuracy: 0.9566324848741172\n",
-      "ROC accuracy: 0.962713098839318\n",
-      "ROC accuracy: 0.9582139630920119\n",
-      "ROC accuracy: 0.960056125134188\n",
-      "ROC accuracy: 0.9611252216348987\n",
-      "ROC accuracy: 0.9619930795281855\n",
-      "0.9601\n",
-      "{'num_leaves': 116, 'max_depth': 78, 'n_estimators': 273, 'subsample_for_bin': 87043, 'min_child_samples': 1000, 'reg_alpha': 0.9028845416568297, 'colsample_bytree': 0.6967754069828626, 'learning_rate': 0.0442974258725275}\n"
+      "ROC accuracy: 0.9795899570763599\n",
+      "ROC accuracy: 0.9767642451966236\n",
+      "ROC accuracy: 0.9777712886475194\n",
+      "ROC accuracy: 0.9776634516939279\n",
+      "ROC accuracy: 0.9791348049148151\n",
+      "ROC accuracy: 0.9790282713852372\n",
+      "ROC accuracy: 0.9752745068352099\n",
+      "ROC accuracy: 0.9792354583024361\n",
+      "0.9781\n",
+      "{'num_leaves': 302, 'max_depth': 157, 'n_estimators': 966, 'subsample_for_bin': 290858, 'min_child_samples': 79, 'reg_alpha': 0.9919573524807885, 'colsample_bytree': 0.5653288564015742, 'learning_rate': 0.028565794309535042}\n"
      ]
     }
    ],
@@ -441,11 +573,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T09:59:46.795294Z",
-     "start_time": "2019-08-13T09:59:45.243262Z"
+     "end_time": "2019-08-14T06:03:46.280671Z",
+     "start_time": "2019-08-14T06:03:44.485522Z"
     }
    },
    "outputs": [],
